<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">4 Fingers TouchlessID</string>
    <string name="next">Siguiente</string>
    <string name="enrollment_complete">Enrolamiento Completo</string>
    <string name="encrypting_data">Encriptando los datos</string>
    <string name="success">Éxito!</string>
    <string name="fingerprint_recognition_complete">Reconocimiento de huellas digitales completado</string>
    <string name="fingerprint_capture_complete">Captura completa</string>
    <string name="fingerprint_recognition_failed">Reconocimiento de huellas digitales fallido</string>
    <string name="liveness_fail">Lo sentimos, el resultado fue incierto</string>
    <string name="sorry">Lo sentimos</string>
    <string name="enrollment_failed">Enrolamiento fallido</string>
    <string name="timeout">Tiempo de espera agotado</string>
    <string name="fail_authenticate">Lo sentimos, no pudimos reconocerte</string>
    <string name="get_started">EMPEZAR</string>
    <string name="cancel">Cancelar</string>
    <string name="four_fingerprint_capture">4 Fingers TouchlessID</string>
    <string name="instruction_text_fourf">Alinee su mano con la guía.\nMantenga los dedos juntos.\nLuego quédese quieto.</string>
    <string name="next_nchange_hands">Siguiente captura</string>
    <string name="please_change_hands">Por favor, cambie de mano</string>
    <string name="success_nfirst_scan_complete">Escaneo 1 de 2 completo</string>
    <string name="success_nfirst_scan_of_three_complete">Escaneo 1 of 3 completo</string>
    <string name="success_nsecond_scan_of_three_complete">Escaneo 2 of 3 completo</string>
    <string name="success_nall_scans_complete">Todos los escaneos han sido completados</string>

    <string name="requires_restart">Algo salió mal. Por favor, intente nuevamente.</string>
    <string name="you_have_completed_enrollment">Encriptando los datos</string>
    <string name="ok">OK</string>
    <string name="veridium_fourf_biometrics_activity_btn_takePicture">TOMAR FOTO</string>
    <string name="veridium_fourf_biometrics_activity_place_your_fingers">Coloque sus dedos dentro de la plantilla</string>
    <string name="veridium_fourf_biometrics_activity_too_nfar">MUY LEJOS</string>
    <string name="veridium_fourf_biometrics_activity_too_nclose">MUY CERCA</string>
    <string name="veridium_fourf_biometrics_activity_4_finger_touchlessid">4 Fingers TouchlessID</string>
    <string name="left_thumb">Pulgar Izquierdo</string>
    <string name="right_thumb">Pulgar Derecho</string>

    <string name="veridium_fourf_biometrics_activity_get_started">EMPEZAR</string>

</resources>